# openrelik-mcp-server

./: README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yaml
docker/: .env.sample  Dockerfile  docker-compose.yml
openrelik-mcp-server/: main.py
openrelik-mcp-server/openrelik_mcp_server/: tools.py  utils.py
src/: main.py
src/openrelik_mcp_server/: tools.py
